Enabled image storing, retrieving and modified handlings

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -25,6 +25,6 @@
         <address >6/14, South Saliya Street, Koranad, Mayiladuthurai - 609001</address>
     </div>
     <div class="container text-center text-white">
-        &copy;Copyrights by ammu
+        &copy; developed by Amirtha
     </div>
 </footer>
