--- a/src/app/profiles/profiles.component.html
+++ b/src/app/profiles/profiles.component.html
@@ -57,13 +57,11 @@
 </section>
 
 
-<!-- <app-filter></app-filter> -->
-
 
 <div class="container-fluid" *ngIf="!isFilter">
     <div class="mt-5 mb-5 col-10 mx-auto text-center card-columns rounded">
         <div *ngFor="let profile of profiles; index as i" class="card mt-5 mb-5 text-center">
-            <!-- <img class="card-img-top img-fluid" src={{img}} alt="Card image"> -->
+            <img class="card-img-top img-fluid" src={{profile.image}} alt="Card image">
             <div class="card-body p-1">
                 <h5 class="text-center">{{ profile.name }}<small *ngIf="profile.age"> - {{ profile.age }}</small></h5>
                 <h6 class="text-center">DOB - <small *ngIf="profile.dob; else elseNil">{{ profile.dob }}</small></h6>
@@ -78,7 +76,7 @@
 <div class="container-fluid" *ngIf="isFilter">
     <div class="mt-5 mb-5 col-10 mx-auto text-center card-columns rounded">
         <div *ngFor="let profile of filteredProfiles; index as i" class="card mt-5 mb-5 text-center">
-            <!-- <img class="card-img-top img-fluid" src={{img}} alt="Card image"> -->
+            <img class="card-img-top img-fluid" src={{profile.image}} alt="Card image">
             <div class="card-body p-1">
                 <h5 class="text-center">{{ profile.name }}<small *ngIf="profile.age"> - {{ profile.age }}</small></h5>
                 <h6 class="text-center">DOB - <small *ngIf="profile.dob; else elseNil">{{ profile.dob }}</small></h6>
