--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -23,9 +23,13 @@
                     <div class="container col-12 text-secondary pt-4 pb-5">
                         <div class="form-group mb-2 row col-10 mx-auto">
                             <label class="col-form-label" for="name"><h5>Full name</h5></label>
-                            <input type="text" formControlName="name" class="form-control col-8 ml-auto" required>
+                            <input type="text" formControlName="name" class="form-control col-8 ml-auto" [ngClass]="{ 'is-invalid': submitted && f.name.errors }" required>
+                            
+                            <div *ngIf="submitted && f.name.errors" class="invalid-feedback">
+                                <div *ngIf="f.name.errors.required">Name is required</div>
+                            </div>
                         </div>
-                        
+
                         <div class="form-group mb-2 row col-10 mx-auto">
                             <label class="col-form-label" for="email"><h5>Email</h5></label>
                             <input type="email" formControlName="email" class="form-control col-8 ml-auto">
